--- a/Mobile/BookAway/app/src/main/AndroidManifest.xml
+++ b/Mobile/BookAway/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CadastroActivity"></activity>
+        <activity android:name=".CadastroActivity" />
+        <activity android:name=".UserAccountEditActivity"></activity>
     </application>
 
 </manifest>
