--- a/Mobile/BookAway/app/src/main/AndroidManifest.xml
+++ b/Mobile/BookAway/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".CadastroActivity" />
-        <activity android:name=".UserAccountEditActivity"></activity>
+        <activity android:name=".UserAccountEditActivity" />
+        <activity android:name=".SearchActivity"></activity>
     </application>
 
 </manifest>
