--- a/Mobile/BookAway/app/build.gradle
+++ b/Mobile/BookAway/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.example.android.bookaway"
-        minSdkVersion 14
+        applicationId "com.xpmets.bookaway"
+        minSdkVersion 18
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
