--- a/Mobile/BookAway/app/src/main/AndroidManifest.xml
+++ b/Mobile/BookAway/app/src/main/AndroidManifest.xml
@@ -22,14 +22,17 @@
         <activity
             android:name=".CadastroActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"></activity>
 
         <activity
             android:name=".SelectedBookActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".SearchActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
