--- a/Mobile/BookAway/app/build.gradle
+++ b/Mobile/BookAway/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:cardview-v7:23.0.+'
     compile 'com.android.support:design:23.3.0'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
