--- a/Mobile/BookAway/app/src/main/AndroidManifest.xml
+++ b/Mobile/BookAway/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -32,6 +33,11 @@
 
         <activity
             android:name=".SearchActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".UserAccountEditActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme"></activity>
     </application>
