--- a/Web/Bookaway/pom.xml
+++ b/Web/Bookaway/pom.xml
@@ -15,6 +15,12 @@
     </properties>
     
     <dependencies>
+        <!-- File Upload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.2</version>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
