--- a/Web/Bookaway/pom.xml
+++ b/Web/Bookaway/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>10.12.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
