--- a/Mobile/BookAway/build.gradle
+++ b/Mobile/BookAway/build.gradle
@@ -7,6 +7,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.2'
 
+        classpath 'com.google.code.gson:gson:2.7'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
